src/objects/VPM_VendorRequestException__c.object
<CustomObject>
    <description>VPM - pilot object used to demonstrate future roadmap and exception handling for MDM Ops. Awaiting approval from sponsors before confirming as solution component.</description>
    <fields>
        <fullName>VPM_Category__c</fullName>
        <description>VPM - The category of the exception to allow for grouped reporting on exception trends.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Field/Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Data from SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Validation Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Description__c</fullName>
        <description>VPM - Allows the user to enter a written description of the exception</description>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPM_ExceptionSummary__c</fullName>
        <description>VPM - a summary of the exception raised</description>
        <inlineHelpText>Summarise what you need the exception to achieve</inlineHelpText>
        <label>Exception Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_RelatedVendorRequest__c</fullName>
        <description>VPM - the Vendor Request the exception is logged against</description>
        <label>Related Vendor Request</label>
        <referenceTo>VPM_PurchasingRequests__c</referenceTo>
        <relationshipLabel>Vendor Request Exceptions</relationshipLabel>
        <relationshipName>Vendor_Request_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VPM_Status__c</fullName>
        <description>VPM - The status of the MDM Ops review of the item</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved in SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Development</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Request Exception</label>
    <nameField>
        <displayFormat>VenReqExc-{000000}</displayFormat>
        <label>Vendor Request Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Request Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>